# app/rpc/content/internal/entity/model/ran_feed_content_review.gen.go
@@ -1,0 +1,30 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNameRanFeedContentReview = "ran_feed_content_review"
+
+// RanFeedContentReview 内容审核记录表
+type RanFeedContentReview struct {
+	ID        int64     `gorm:"column:id;primaryKey;comment:主键id" json:"id"`                                         // 主键id
+	ContentID int64     `gorm:"column:content_id;not null;comment:被审内容ID" json:"content_id"`                         // 被审内容ID
+	Decision  int32     `gorm:"column:decision;not null;comment:审核决策 10=通过 20=拒绝" json:"decision"`                   // 审核决策 10=通过 20=拒绝
+	Reason    string    `gorm:"column:reason;not null;comment:拒绝理由 通过时为空" json:"reason"`                             // 拒绝理由 通过时为空
+	Version   int32     `gorm:"column:version;not null;default:1;comment:版本号（乐观锁）" json:"version"`                   // 版本号（乐观锁）
+	IsDeleted int32     `gorm:"column:is_deleted;not null;comment:逻辑删除 0=正常 1=删除" json:"is_deleted"`                 // 逻辑删除 0=正常 1=删除
+	CreatedBy int64     `gorm:"column:created_by;not null;comment:创建人（审核管理员 admin_user.id）" json:"created_by"`       // 创建人（审核管理员 admin_user.id）
+	UpdatedBy int64     `gorm:"column:updated_by;not null;comment:最后修改人" json:"updated_by"`                          // 最后修改人
+	CreatedAt time.Time `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"created_at"` // 创建时间
+	UpdatedAt time.Time `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"updated_at"` // 更新时间
+}
+
+// TableName RanFeedContentReview's table name
+func (*RanFeedContentReview) TableName() string {
+	return TableNameRanFeedContentReview
+}
